{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 53,
  "lineage": "78787949-7fe2-a876-3d5a-81d5e3570c74",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/b59daaf5-a6ef-4435-8b81-a93b295f0565/resourceGroups/udacityresourcegroup/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b59daaf5-a6ef-4435-8b81-a93b295f0565/resourceGroups/udacityresourcegroup/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB"
              }
            ],
            "id": "/subscriptions/b59daaf5-a6ef-4435-8b81-a93b295f0565/resourceGroups/udacityresourcegroup/providers/Microsoft.Network/loadBalancers/TestLoadBalancer",
            "location": "eastus",
            "name": "TestLoadBalancer",
            "resource_group_name": "udacityresourcegroup",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backendpool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b59daaf5-a6ef-4435-8b81-a93b295f0565/resourceGroups/udacityresourcegroup/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/b59daaf5-a6ef-4435-8b81-a93b295f0565/resourceGroups/udacityresourcegroup/providers/Microsoft.Network/loadBalancers/TestLoadBalancer",
            "name": "BackEndAddressPool",
            "resource_group_name": "udacityresourcegroup"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b59daaf5-a6ef-4435-8b81-a93b295f0565/resourceGroups/udacityresourcegroup/providers/Microsoft.Network/networkInterfaces/nic_VM_NIC_0",
            "internal_domain_name_suffix": "ysz0yrlez0eulc5q3brp5wlssb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b59daaf5-a6ef-4435-8b81-a93b295f0565/resourceGroups/udacityresourcegroup/providers/Microsoft.Network/virtualNetworks/odacitynw/subnets/VM_subnet"
              }
            ],
            "location": "eastus",
            "name": "nic_VM_NIC_0",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "udacityresourcegroup"
          },
          "dependencies": [
            "azurerm_resource_group.rg_vm",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vn_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "backendipaddress",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/b59daaf5-a6ef-4435-8b81-a93b295f0565/resourceGroups/udacityresourcegroup/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/b59daaf5-a6ef-4435-8b81-a93b295f0565/resourceGroups/udacityresourcegroup/providers/Microsoft.Network/networkInterfaces/nic_VM_NIC_0/ipConfigurations/internal|/subscriptions/b59daaf5-a6ef-4435-8b81-a93b295f0565/resourceGroups/udacityresourcegroup/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/b59daaf5-a6ef-4435-8b81-a93b295f0565/resourceGroups/udacityresourcegroup/providers/Microsoft.Network/networkInterfaces/nic_VM_NIC_0"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.backendpool",
            "azurerm_network_interface.NIC",
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg_vm",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vn_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "allow_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b59daaf5-a6ef-4435-8b81-a93b295f0565/resourceGroups/udacityresourcegroup/providers/Microsoft.Network/networkSecurityGroups/deploy-web-sg",
            "location": "eastus",
            "name": "deploy-web-sg",
            "resource_group_name": "udacityresourcegroup",
            "security_rule": [],
            "tags": {
              "environment": "odacityenv"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_access_from_intenet_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b59daaf5-a6ef-4435-8b81-a93b295f0565/resourceGroups/udacityresourcegroup/providers/Microsoft.Network/networkSecurityGroups/deploy-web-sg/securityRules/HTTP_80",
            "name": "HTTP_80",
            "network_security_group_name": "deploy-web-sg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "udacityresourcegroup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.allow_access",
            "azurerm_resource_group.rg_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_access_from_vm_on_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.0.2.0/24"
            ],
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b59daaf5-a6ef-4435-8b81-a93b295f0565/resourceGroups/udacityresourcegroup/providers/Microsoft.Network/networkSecurityGroups/deploy-web-sg/securityRules/access_from_same_subnet",
            "name": "access_from_same_subnet",
            "network_security_group_name": "deploy-web-sg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "udacityresourcegroup",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.0.2.0/24"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.allow_access",
            "azurerm_resource_group.rg_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/b59daaf5-a6ef-4435-8b81-a93b295f0565/resourceGroups/udacityresourcegroup/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "137.117.83.148",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "PublicIPForLB",
            "resource_group_name": "udacityresourcegroup",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b59daaf5-a6ef-4435-8b81-a93b295f0565/resourceGroups/udacityresourcegroup/providers/Microsoft.Network/virtualNetworks/odacitynw/subnets/VM_subnet",
            "name": "VM_subnet",
            "resource_group_name": "udacityresourcegroup",
            "virtual_network_name": "odacitynw"
          },
          "dependencies": [
            "azurerm_resource_group.rg_vm",
            "azurerm_virtual_network.vn_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vn_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "45acb3c4-ce64-4589-8bf0-e862ffd97291",
            "id": "/subscriptions/b59daaf5-a6ef-4435-8b81-a93b295f0565/resourceGroups/udacityresourcegroup/providers/Microsoft.Network/virtualNetworks/odacitynw",
            "location": "eastus",
            "name": "odacitynw",
            "resource_group_name": "udacityresourcegroup",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg_vm"
          ]
        }
      ]
    }
  ]
}